--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ httpdate = "0.3.2"
 serde = "1.0.100"
 serde_derive = "1.0.100"
 serde_json = "1.0.40"
+log = "0.4.8"
+
+[dev-dependencies]
+femme = "1.2.0"
 
 [[example]]
 name = "list-key-values"
