Add list labels sample and some docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ femme = "1.2.0"
 name = "list-key-values"
 path = "examples/list_key_values.rs"
 [[example]]
+name = "list-labels"
+path = "examples/list_labels.rs"
+[[example]]
 name = "get-key-value"
 path = "examples/get_key_value.rs"
 [[example]]
